# PracticeHanzi

./: .gitignore  README.md  app.py  packages.txt  pyproject.toml  requirements-ci.txt  requirements.txt
.cursor/plans/: chinese_calligraphy_sheet_generator_61936604.plan.md  pdf_headers_practice_fonts_956e73aa.plan.md  phrase_layout_and_metadata_817eaeb9.plan.md  phrases_instruments_presets_ui_84e97556.plan.md
.github/workflows/: ci.yml
data/: translation_cache.json
data/presets/: animals.json  colors.json  common_phrases.json  countries.json  family.json  home.json  idioms.json  numbers.json  strokes.json
scripts/: build_idioms_from_china_idiom.py
tests/: test_decomposition.py  test_idiom_extractor.py  test_pdf_generator.py  test_pdf_naming.py  test_pdf_preview.py  test_practice_rows_cap.py  test_presets.py  test_segmentation.py  test_translation_migration.py
utils/: decomposition.py  fonts.py  palette.py  pdf_generator.py  pdf_naming.py  pdf_options.py  pdf_preview.py  pinyin_utils.py  presets.py  radicals.py  segmentation.py  session.py  stroke_order.py  translation.py
