[project]
name = "practicehanzi"
version = "0.3.0"
description = "Printable A4 Chinese calligraphy training sheets with stroke order, pinyin, IDS, and translations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PracticeHanzi" }]
dependencies = [
    "streamlit>=1.56,<2.0",
    "reportlab>=4.4,<5.0",
    "svglib>=1.6,<2.0",
    "pypinyin>=0.55,<1.0",
    "deep-translator>=1.11,<2.0",
    "requests>=2.32,<3.0",
    "charset-normalizer>=3.3,<4.0",
    "Pillow>=12.2,<13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
preview = [
    "pdf2image>=1.17",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

# Google Drive / cross-filesystem installs: avoid hardlink-to-cache (uv warning).
[tool.uv]
link-mode = "copy"
